typescript/checker/tests/conformance/parser/ecmascript5/Statements/parserForStatement2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            58,
        ),
        hi: BytePos(
            59,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/parserForStatement2.ts:4:30
  |
4 | for (a in b[c] = b[c] || [], d) {
  |                              ^

